--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <button type="button" id="reset-btn">click to reset</button>
-    <em>Hover your finger across the grid to sketch</em>
+    <p><em>Hover your finger across the grid to sketch</em></p>
     <div id="root"></div>
 
-    <small>Bernard N. Muli</small>
+    <small>Bernard N. M.</small>
     <script src="./index.js"></script>
 </body>
 </html>
