--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <button type="button" id="reset-btn">click to reset</button>
-    <p><em>Hover your finger across the grid to sketch</em></p>
+    <p><em>Hover across or click the squares to sketch</em></p>
     <div id="root"></div>
 
     <small>Bernard N. M.</small>
